# static/api.swagger.json
@@ -1,8 +1,14 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "kvendingoldo.user_api.v1.UserService in req!!!",
-    "version": "1.0"
+    "title": "GU User service",
+    "description": "Documentation's GU user service",
+    "version": "1.0",
+    "contact": {
+      "name": "Alexander Sharov",
+      "url": "http://github.com/kvendingoldo",
+      "email": "kvendingoldo@yandex.ru"
+    }
   },
   "tags": [
     {
@@ -26,9 +32,26 @@
         "operationId": "UserService_GetAll",
         "responses": {
           "200": {
-            "description": "A successful response.",
+            "description": "OK",
             "schema": {
               "$ref": "#/definitions/v1GetAllResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": ".grpc.gateway.examples.internal.proto.examplepb.ErrorResponse"
             }
           },
           "default": {
@@ -45,12 +68,29 @@
       "post": {
         "summary": "Create new user",
         "description": "Create new user on the system",
-        "operationId": "UserService_New",
+        "operationId": "UserService_Create",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1NewResponse"
+              "$ref": "#/definitions/v1CreateResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": ".grpc.gateway.examples.internal.proto.examplepb.ErrorResponse"
             }
           },
           "default": {
@@ -62,45 +102,13 @@
         },
         "parameters": [
           {
-            "name": "user.id",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "user.name",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "user.latitude",
-            "in": "query",
-            "required": false,
-            "type": "number",
-            "format": "double"
-          },
-          {
-            "name": "user.longitude",
-            "in": "query",
-            "required": false,
-            "type": "number",
-            "format": "double"
-          },
-          {
-            "name": "user.createdAt",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "date-time"
-          },
-          {
-            "name": "user.UpdatedAt",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "date-time"
+            "name": "body",
+            "description": "The user to create.",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1User"
+            }
           }
         ],
         "tags": [
@@ -118,6 +126,23 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/v1GetByIDResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": ".grpc.gateway.examples.internal.proto.examplepb.ErrorResponse"
             }
           },
           "default": {
@@ -149,6 +174,23 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/v1DeleteResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": ".grpc.gateway.examples.internal.proto.examplepb.ErrorResponse"
             }
           },
           "default": {
@@ -201,6 +243,16 @@
         }
       }
     },
+    "v1CreateResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        }
+      },
+      "title": "TODO: probably the whole user instead of id will be better"
+    },
     "v1DeleteResponse": {
       "type": "object",
       "properties": {
@@ -229,15 +281,6 @@
         }
       }
     },
-    "v1NewResponse": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        }
-      }
-    },
     "v1UpdateResponse": {
       "type": "object",
       "properties": {
@@ -245,14 +288,16 @@
           "type": "string",
           "format": "int64"
         }
-      }
+      },
+      "title": "TODO: probably the whole user instead of id will be better"
     },
     "v1User": {
       "type": "object",
       "properties": {
         "id": {
           "type": "string",
-          "format": "int64"
+          "format": "int64",
+          "description": "The resource name of the book.\n\nFormat: `publishers/{publisher}/books/{book}`\n\nExample: `publishers/1257894000000000000/books/my-book`"
         },
         "name": {
           "type": "string"
@@ -265,19 +310,19 @@
           "type": "number",
           "format": "double"
         },
-        "createdAt": {
+        "created_at": {
           "type": "string",
           "format": "date-time"
         },
-        "UpdatedAt": {
+        "updated_at": {
           "type": "string",
           "format": "date-time"
         }
-      }
+      },
+      "description": "A standard Create message from AIP-133 with a user-specified ID.\nThe user-specified ID (the `book_id` field in this example) must become a\nquery parameter in the OpenAPI spec.\n\nSee: https://google.aip.dev/133#user-specified-ids"
     }
   },
   "externalDocs": {
-    "description": "GU user service",
     "url": "https://github.com/kvendingoldo/gu-user-service"
   }
 }
